add-modules clause added